# bubbles

./: .gitignore  GBRAIN.md  PRODUCT.md  README.md
backend/: main.py  pyproject.toml
backend/app/: arrange.py  chords.py  drums.py  library.py  pitch.py  schemas.py
backend/tests/: test_arrange.py  test_drums.py  test_pitch.py
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/audio/: chord.ts  chordGuide.ts  edit.ts  export.ts  fixtures.ts  instruments.ts  pattern.ts  renderer.ts  sampler.ts  validate.ts
frontend/src/components/: Brand.tsx  EditorControls.tsx  ExportLink.tsx  HumButton.tsx  Icon.tsx  InstrumentPicker.tsx  LayerControls.tsx  Layers.tsx  Library.tsx  MobileFallback.tsx  NotesDebug.tsx  PlaybackControls.tsx  RationaleChat.tsx  VibePresets.tsx  VoiceMic.tsx
frontend/src/hooks/: useHumDrums.ts  useHumRecorder.ts  useVoiceCommand.ts
frontend/src/styles/: app.css  tokens.css
frontend/tests/: arrangement.schema.test.ts  chord.test.ts  edit.test.ts  pattern-dsl.test.ts  tone-renderer.test.ts
shared/: types.ts
